# gcp-cloudfunc-example

./: .gitignore  main.py  pyproject.toml  test_util.py  util.py
cloud_function_helloworld/: config.py  main.py  util.py
tests/: test_util.py
