[tool.poetry]
name = "gcp-cloudfunc-example"
version = "0.1.0"
description = ""
authors = ["Jon Bennett <jon.bennett@futurenet.com>"]
readme = "README.md"
packages = [{include = "cloud_functions/helloworld"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.group.dev.dependencies]
pytest-subtests = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
